--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img id="player" src="" alt="player">
+    <img id="player" src="assets/player/level1/idle.png" alt="player">
 </body>
 
 <script src="main.js"></script>
