--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div style="background-color: black; width: 50%; height: 100vh;"></div>
+    <div style="background-color: black; width: 50%; height: 100vh;" id="logger"></div>
     <img id="player" src="assets/player/level1/idle.png" alt="player">
 </body>
 
