moving to class-based

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 <body>
     <div style="background-color: black; width: 50%; height: 100vh;" id="logger"></div>
-    <img id="player" src="assets/player/level1/idle.png" alt="player">
 </body>
 
-<script src="main.js"></script>
+<script src="engine.js" type="module"></script>
+<script src="player.js" type="module"></script>
+<script src="main.js" type="module"></script>
 
 </html>
