--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
-    <div style="background-color: black; width: 50%; height: 100vh;" id="logger"></div>
+    <div style="background-color: transparent; width: 50%; height: 100vh;" id="logger"></div>
 </body>
 
 <script src="engine.js" type="module"></script>
+<script src="bullet.js" type="module"></script>
 <script src="player.js" type="module"></script>
 <script src="main.js" type="module"></script>
 
