--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div style="background-color: transparent; width: 50%; height: 100vh;" id="logger"></div>
+    <div style="background-color: transparent;" id="logger"></div>
 </body>
 
 <script src="engine.js" type="module"></script>
