added enemy script

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <script src="engine.js" type="module"></script>
 <script src="bullet.js" type="module"></script>
 <script src="player.js" type="module"></script>
+<script src="enemy.js" type="module"></script>
 <script src="main.js" type="module"></script>
 
 </html>
