--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 </head>
 
 <body>
-    <div style="background-color: transparent;" id="logger"></div>
+    <div id="GUI">
+        <div id="healthbar">
+            <img src="assets/hearth.png">
+        </div>
+    </div>
 </body>
 
 <script src="engine.js" type="module"></script>
