--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div id="healthbar">
             <img src="assets/hearth.png">
         </div>
+        <!-- <h1 id="message">IN GIOCO</h1> -->
     </div>
 </body>
 
