--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="healthbar">
             <img src="assets/hearth.png">
         </div>
-        <!-- <h1 id="message">IN GIOCO</h1> -->
+        <h1 id="level">LIVELLO </h1>
     </div>
 </body>
 
