ministage parts working

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     </div>
 </body>
 
-<script src="engine.js" type="module"></script>
-<script src="bullet.js" type="module"></script>
-<script src="player.js" type="module"></script>
-<script src="enemy.js" type="module"></script>
-<script src="main.js" type="module"></script>
+<script src="scripts/engine.js" type="module"></script>
+<script src="scripts/bullet.js" type="module"></script>
+<script src="scripts/ministage.js" type="module"></script>
+<script src="scripts/player.js" type="module"></script>
+<script src="scripts/enemy.js" type="module"></script>
+<script src="scripts/main.js" type="module"></script>
 
 </html>
