--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 <script src="scripts/ministage.js" type="module"></script>
 <script src="scripts/player.js" type="module"></script>
 <script src="scripts/enemy.js" type="module"></script>
-<script src="scripts/main.js" type="module"></script>
+<script src="main.js" type="module"></script>
 
 </html>
