ministage at root

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <script src="scripts/engine.js" type="module"></script>
 <script src="scripts/bullet.js" type="module"></script>
-<script src="scripts/ministage.js" type="module"></script>
+<script src="ministage.js" type="module"></script>
 <script src="scripts/player.js" type="module"></script>
 <script src="scripts/enemy.js" type="module"></script>
 <script src="main.js" type="module"></script>
